footer stays down on mobile version. Fixed tables on mobile size, now with scroll instead of leaving the screen

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,14 +6,12 @@
 html {
     scroll-behavior: smooth;
     height: 100%;
-    position: relative;
 }
 
 body {
     margin: 0;
     padding: 0;
     height: 100%;
-    position: relative;
 }
 
 h1 {
@@ -495,6 +493,8 @@ p {
 table {
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 1vw;
+
 }
 
 table, td, th {
@@ -503,12 +503,44 @@ table, td, th {
     padding: 8px;
 }
 
+tr:nth-child(even) {
+    background-color: #f1f6ef;
+}
+
 #first_table_color td {
     background-color: #4b804b;
     border-style: inherit;
     border-color: inherit;
     color: white;
 }
+
+/*Scrollbar i hver sektion*/
+/* width */
+.scrolling {
+    overflow-x: auto;
+}
+.scrolling::-webkit-scrollbar {
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* Track */
+.scrolling::-webkit-scrollbar-track {
+    background-color: #d6dee2;
+    border-radius: 10px;
+}
+
+/* Handle */
+.scrolling::-webkit-scrollbar-thumb {
+    background-color: #4b804b;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.scrolling::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(75, 128, 75, 0.4);
+}
+
 
 /*-------Button-----*/
 .button1 {
@@ -708,6 +740,9 @@ a.fa-instagram:before {
         width: 100%;
         height: 35vw;
 
+    }
+    footer {
+        margin-top: 30vw;
     }
 }
 
